@@ -36,6 +36,11 @@ set srcfile ${testfile}.c
 set binfile ${objdir}/${subdir}/${testfile}
 
 
+# Test depends on printf, which the sparclet stub doesn't support.  
+if { [istarget "sparclet-*-*"] } {
+    return 0;
+}
+
 if  { [gdb_compile "${srcdir}/${subdir}/${srcfile}" "${binfile}" executable {debug additional_flags=-w}] != "" } {
      gdb_suppress_entire_file "Testcase compile failed, so all tests in this file will automatically fail."
     }
@@ -122,8 +127,10 @@ gdb_expect {
 
 send_gdb "finish\n"
 gdb_expect {
- -re  "Run till exit from .0  loop_count \\(\\) at.*call-rt-st.c:106\[ \t\r\n\]+main \\(\\) at.*call-rt-st.c:514\[ \t\r\n\]+514\[\t \]+return 0;.*$gdb_prompt $" {
-                 pass "finish out from  loop_count"}
+ -re  "Run till exit from .0  loop_count \\(\\) at.*call-rt-st.c:106\[ \t\r\n\]+main \\(\\) at.*call-rt-st.c:617\[ \t\r\n\]+617\[\t \]+return 0;.*$gdb_prompt $" {
+                 pass "finish out from  loop_count (line 617)"}
+ -re  "Run till exit from .0  loop_count \\(\\) at.*call-rt-st.c:106\[ \t\r\n\]+main \\(\\) at.*call-rt-st.c:615\[ \t\r\n\]+615\[\t \]+loop_count.*$gdb_prompt $" {
+                 pass "finish out from  loop_count (line 615)"}
       -re ".*$gdb_prompt $" { fail "finish out from loop_count"}           
       timeout           { fail "(timeout)finish out from loop_count"}
 }
@@ -147,25 +154,25 @@ gdb_expect {
     timeout           { fail "(timeout) print_one_large_struct(*list1)" }
   }
 
-send_gdb "print print_one_double(*d1)\n"
-gdb_expect {
+if {![target_info exists gdb,skip_float_tests]} {
+  send_gdb "print print_one_double(*d1)\n"
+  gdb_expect {
     -re ".*Contents of one_double_t:\[ \r\n\]+1\\.111110\[ \r\n\]+.\[0-9\]+ = \{double1 = 1\\.11111\}.*$gdb_prompt $" {
-        pass "print print_one_double(*d1)"
-      }
+      pass "print print_one_double(*d1)"
+    }
     -re ".*$gdb_prompt $" { fail "print print_one_double(*d1)" }
     timeout           { fail "(timeout) print_one_double(*d1)" }
   }
 
-
-
-send_gdb "print print_two_floats(*f3)\n"
-gdb_expect {
+  send_gdb "print print_two_floats(*f3)\n"
+  gdb_expect {
     -re ".*Contents of two_floats_t:\[ \r\n\]+-2\\.345000\[ \t]+1\\.000000\[ \r\n\]+.\[0-9\]+ = \{float1 = -2\\.34500003, float2 = 1\}.*$gdb_prompt $" {
-        pass "print print_two_floats(*f3)"
-      }
+      pass "print print_two_floats(*f3)"
+    }
     -re ".*$gdb_prompt $" { fail "print print_two_floats(*f3)" }
     timeout           { fail "(timeout) print_two_floats(*f3)" }
   }
+}
 
 send_gdb "print print_bit_flags(*flags)\n"
 gdb_expect {
