@@ -37,6 +37,11 @@ set testfile "call-strs"
 set srcfile ${testfile}.c
 set binfile ${objdir}/${subdir}/${testfile}
 
+# Test depends on printf, which the sparclet stub doesn't support.  
+if { [istarget "sparclet-*-*"] } {
+    return 0;
+}
+
 if  { [gdb_compile "${srcdir}/${subdir}/${srcfile}" "${binfile}" executable {debug}] != "" } {
     gdb_suppress_entire_file "Testcase compile failed, so all tests in this file will automatically fail."
 }
@@ -91,6 +96,7 @@ send_gdb "set print sevenbit-strings\n" ; gdb_expect -re "$gdb_prompt $"
 send_gdb "set print address off\n" ; gdb_expect -re "$gdb_prompt $"
 send_gdb "set width 0\n" ; gdb_expect -re "$gdb_prompt $"
 
+set timeout 120
 
 if ![runto_main] then {
     perror "couldn't run to breakpoint"
@@ -107,11 +113,11 @@ gdb_expect {
 
 
 #step
-send_gdb "step\n"
+send_gdb "next\n"
 gdb_expect {
-        -re ".*str_func\\(\"abcd\", \"efgh\", \"ijkl\", \"mnop\", \"qrst\", \"uvwx\", \"yz12\"\\);.*$gdb_prompt $" {pass "step after strcpy"}
-        -re ".*$gdb_prompt $" { fail "step after strcpy" }
-        timeout { fail "step after strcpy (timeout)" }
+        -re ".*str_func\\(\"abcd\", \"efgh\", \"ijkl\", \"mnop\", \"qrst\", \"uvwx\", \"yz12\"\\);.*$gdb_prompt $" {pass "next over strcpy"}
+        -re ".*$gdb_prompt $" { fail "next over strcpy" }
+        timeout { fail "next over strcpy (timeout)" }
     }
 
 #print buf
@@ -217,26 +223,25 @@ gdb_expect {
     timeout           { fail "(timeout) call str_func(\"a\",\"b\",\"c\",\"d\",\"e\",\"f\",\"g\")" }
   }
 
-#print str_func(s,s,s,s,s,s,s,s)
-send_gdb "print  str_func(s,s,s,s,s,s,s,s)\n"
+#print str_func(s,s,s,s,s,s,s)
+send_gdb "print  str_func(s,s,s,s,s,s,s)\n"
 gdb_expect {
     -re "first string arg is: test string\[ \t\r\n\]+second string arg is: test string\[ \t\r\n\]+third string arg is: test string\[ \t\r\n\]+fourth string arg is: test string\[ \t\r\n\]+fifth string arg is: test string\[ \t\r\n\]+sixth string arg is: test string\[ \t\r\n\]+seventh string arg is: test string\[ \t\r\n\]+.*\"test stringtest stringtest stringtest stringtest stringtest stringtest string\".*$gdb_prompt $" {
-        pass "print str_func(s,s,s,s,s,s,s,s)"
+        pass "print str_func(s,s,s,s,s,s,s)"
       }
-    -re ".*$gdb_prompt $" { fail "print str_func(s,s,s,s,s,s,s,s)" }
-    timeout           { fail "(timeout) print str_func(s,s,s,s,s,s,s,s)" }
+    -re ".*$gdb_prompt $" { fail "print str_func(s,s,s,s,s,s,s)" }
+    timeout           { fail "(timeout) print str_func(s,s,s,s,s,s,s)" }
   }
 
-#call str_func(s,s,s,s,s,s,s,s)
-send_gdb "call  str_func(s,s,s,s,s,s,s,s)\n"
+#call str_func(s,s,s,s,s,s,s)
+send_gdb "call  str_func(s,s,s,s,s,s,s)\n"
 gdb_expect {
     -re "first string arg is: test string\[ \t\r\n\]+second string arg is: test string\[ \t\r\n\]+third string arg is: test string\[ \t\r\n\]+fourth string arg is: test string\[ \t\r\n\]+fifth string arg is: test string\[ \t\r\n\]+sixth string arg is: test string\[ \t\r\n\]+seventh string arg is: test string\[ \t\r\n\]+.*\"test stringtest stringtest stringtest stringtest stringtest stringtest string\".*$gdb_prompt $" {
-        pass "call str_func(s,s,s,s,s,s,s,s)"
+        pass "call str_func(s,s,s,s,s,s,s)"
       }
-    -re ".*$gdb_prompt $" { fail "call str_func(s,s,s,s,s,s,s,s)" }
-    timeout           { fail "(timeout) call str_func(s,s,s,s,s,s,s,s)" }
+    -re ".*$gdb_prompt $" { fail "call str_func(s,s,s,s,s,s,s)" }
+    timeout           { fail "(timeout) call str_func(s,s,s,s,s,s,s)" }
   }
 
 gdb_exit
 return 0
-~
